--- a/index.html
+++ b/index.html
@@ -49,23 +49,11 @@
         </div>
 
         <!--Se completara con un texto personalizado para el taller acerca de su trayectoria-->
-        <p class="acercade"><b>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut
-                labore
-                et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum. But I must explain to you how all this mistaken idea of
-                denouncing pleasure and praising pain was born and I will give you a complete account of the system,
-                and expound the actual teachings of the great explorer of the truth, the master-builder of human
-                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because
-                those who do not know how to pursue pleasure rationally encounter consequences that are extremely
-                painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because
-                it is pain, but because occasionally circumstances occur in which toil and pain can procure him some
-                great pleasure."</b></p>
+        <p class="acercade"><b>¡Sean bienvenidos! <br><br>
+            Ubicado en el centro de la ciudad de Tigre, Cascara Taller nació con la idea de brindar un espacio de talleres y workshops en los cuales brindar un ambiente cálido y familiar, casi como en casa.
+            <br>Actualmente contamos con talleres de Arte, Manga, Dibujo, Pintura, Guitarra-Ukelele, Canto y Teatro. Además, los días Sábados y cada quince días, organizamos variedad de workshops de aproximadamente cuatro horas cada uno.
+            <br><br>De nuestro caparazón al mundo… ¡Te esperamos!
+            </b></p>
         <br><br>
         <div class="mapa">
             <iframe
