--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -39,10 +39,12 @@
             <!--Texto de la card-->
             <div class="contenido">
                 <h3>Arte</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
-                    veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
-                    quis corporis minima!</p>
-                <a href="../pages/contacto.html"> Inscribite!</a>
+                <p>TALLER PARA ADULTOS DE DIBUJO/PINTURA <br>
+                    En el taller exploraremos las inquietudes de la individualidad y maneras de expresar. El papel no es
+                    un límite. Buscaremos que herramientas son las más cómodas para comunicarnos mejor con lo que
+                    queremos y buscamos expresar. Vení con pasión. Anímate a conectar con las alternativas.<br>
+                    ¡VAMOS A EXPLORAR!</p>
+                <a href="../pages/contacto.html"> Quiero más info!</a>
             </div>
         </div>
         <div class="card">
@@ -50,11 +52,12 @@
                 <img src="../img/tdibujo.jpg" alt="tdibujo">
             </figure>
             <div class="contenido">
-                <h3>Dibujo</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
-                    veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
-                    quis corporis minima!</p>
-                <a href="../pages/contacto.html"> Inscribite!</a>
+                <h3>Dibujo y Manga</h3>
+                <p>TALLER PARA ADULTOS Y ADOLESCENTES DIBUJO Y MANGA <br>
+                Exploraremos diversas técnicas como tintas, acuarelas, grafito, acrílico, así como también el collage y la historieta. <br>
+                ¡ANIMATE!
+                </p>
+                <a href="../pages/contacto.html"> Quiero más info!</a>
             </div>
         </div>
         <div class="card">
@@ -63,10 +66,11 @@
             </figure>
             <div class="contenido">
                 <h3>Grabado</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime est ullam quidem, delectus dolor
-                    velit, blanditiis eos doloremque molestiae harum fugiat labore perspiciatis earum illum mollitia ad
-                    quisquam consectetur rem?</p>
-                <a href="../pages/contacto.html"> Inscribite!</a>
+                <p>TALLER DE UN MES PARA LOS MAS PEQUES<br>
+                Exploremos las texturas, las impresiones, el color y el mundo de los sellos.<br>
+                🌈¡Vamos a divertirnos entre colores! 🌈 <br>
+                 ¡No dudes en consultarnos!</p>
+                <a href="../pages/contacto.html"> Quiero más info!</a>
             </div>
         </div>
         <div class="card">
@@ -75,10 +79,12 @@
             </figure>
             <div class="contenido">
                 <h3>Música</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
-                    veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
-                    quis corporis minima!</p>
-                <a href="../pages/contacto.html"> Inscribite!</a>    
+                <p>GUITARRA Y UKELELE CON @fabymusicok<br>
+                    - Clases individuales de 1 hora para todas las edades.<br>
+                    - Improvisacion y lenguaje musical.<br>
+                    - Promo descuento abonando el mes entero.<br>
+                    ¡Los esperamos!</p>
+                <a href="../pages/contacto.html"> Quiero más info!</a>
             </div>
         </div>
         <div class="card">
@@ -87,10 +93,12 @@
             </figure>
             <div class="contenido">
                 <h3>Teatro</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
-                    veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
-                    quis corporis minima!</p>
-                <a href="../pages/contacto.html"> Inscribite!</a>    
+                <p>Luz, camara, ACCION!🎬<br>
+                    Los jueves actuamos, improvisamos, nos reímos y soñamos.<br>
+                    ¡Anímate a cortar la semana siendo lo que quieras ser!<br>
+                    Venite a un ratito y llega al finde con la mejor de las ondas 👑<br>
+                    Te espera @luliisenini hacerte la segunda.</p>
+                <a href="../pages/contacto.html"> Quiero más info!</a>
             </div>
         </div>
 
