--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -39,7 +39,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
                         veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
                         quis corporis minima!</p>
-                    <a href="../pages/contacto.html"> Inscribite!</a>    
+                    <a href="../pages/contacto.html"> Quiero más info!</a>    
                 </div>
             </div>
             <div class="card">
@@ -51,7 +51,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
                         veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
                         quis corporis minima!</p>
-                    <a href="../pages/contacto.html"> Inscribite!</a>    
+                    <a href="../pages/contacto.html"> Quiero más info!</a>    
                 </div>
             </div>
             <div class="card">
@@ -63,7 +63,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
                         veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
                         quis corporis minima!</p>
-                    <a href="../pages/contacto.html"> Inscribite!</a>    
+                    <a href="../pages/contacto.html"> Quiero más info!</a>    
                 </div>
             </div>
     
