--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -14,77 +14,91 @@
     <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
 </head>
 
-    <body>
-        
-        <header>
-            <nav class="nav">
-                <a href="../index.html">
-                    <img class="logo" src="../img/cascaralogo.png" alt="logo-taller">
-                </a>
-                <ul class="menu">
-                    <li><a class="li" href="../pages/talleres.html">Talleres</a></li>
-                    <li><a class="li" href="../pages/workshops.html">Workshops</a></li>
-                    <li><a class="li" href="../pages/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
-        <br><br>
-        <div class="containerCards">
-            <div class="card">
-                <figure>
-                    <img src="../img/wencuadernacion.jpg" alt="wcuadernos">
-                </figure>
-                <div class="contenido">
-                    <h3>Encuadernación</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
-                        veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
-                        quis corporis minima!</p>
-                    <a href="../pages/contacto.html"> Quiero más info!</a>    
-                </div>
-            </div>
-            <div class="card">
-                <figure>
-                    <img src="../img/wlettering.jpg" alt="wlettering">
-                </figure>
-                <div class="contenido">
-                    <h3>Lettering</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
-                        veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
-                        quis corporis minima!</p>
-                    <a href="../pages/contacto.html"> Quiero más info!</a>    
-                </div>
-            </div>
-            <div class="card">
-                <figure>
-                    <img src="../img/wmacetas.jpg" alt="wmacetas">
-                </figure>
-                <div class="contenido">
-                    <h3>Efecto Piedra</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
-                        veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
-                        quis corporis minima!</p>
-                    <a href="../pages/contacto.html"> Quiero más info!</a>    
-                </div>
-            </div>
-    
-        </div>
-        <br><br>
-        <footer>
-            <div class="ig">
-                <h3>Seguinos en Instagram!</h3>
-                <div>
-                    <a href="https://www.instagram.com/cascara_taller/" target="_blank">
-                        <img class="iglogo" src="../img/iglogo.png" alt="ig-logo">
-                    </a>
-                </div>
-            </div>
-            <div>
-                <a class="copy" href="https://www.linkedin.com/in/andreavnuñez/" target="_blank">
-                    <b>&copy Copyright Andrea Nuñez - 2023</b>
-                </a>
-            </div>
-        </footer>
+<body>
 
-    </body>
+    <header>
+        <nav class="nav">
+            <a href="../index.html">
+                <img class="logo" src="../img/cascaralogo.png" alt="logo-taller">
+            </a>
+            <ul class="menu">
+                <li><a class="li" href="../pages/talleres.html">Talleres</a></li>
+                <li><a class="li" href="../pages/workshops.html">Workshops</a></li>
+                <li><a class="li" href="../pages/contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <br><br>
+    <div class="containerCards">
+        <div class="card">
+            <figure>
+                <img src="../img/wencuadernacion.jpg" alt="wcuadernos">
+            </figure>
+            <div class="contenido">
+                <h3>Encuadernación</h3>
+                <p>En este encuentro vamos a realizar un cuaderno de costura francesa desde cero ✨<br>
+                    Vamos a guiarte paso a paso para que puedas llevarte un cuaderno terminado hecho por tus propias
+                    manos 🙌🏻<br>
+                    Todos los materiales y herramientas están incluidos por lo que no tenés que llevar nada, solo
+                    ganas de trabajar y creatividad.<br>
+                    Incluimos también sanguchitos y bebidas para poder pasar de un buen rato juntxs. 😉</p>
+                <a href="../pages/contacto.html"> Quiero más info!</a>
+            </div>
+        </div>
+        <div class="card">
+            <figure>
+                <img src="../img/wlettering.jpg" alt="wlettering">
+            </figure>
+            <div class="contenido">
+                <h3>Lettering</h3>
+                <p>✏️¿QUE VAS A APRENDER?<br>
+                    Diferencia entre caligrafía, lettering y brushlettering. Materiales. Cómo sujetar el pincel.
+                    Postura corporal, colocación del marcador y papel.<br>
+                    Trazos básicos:
+                    Práctica de trazos básicos.
+                    Trazos básicos + demostración de errores comunes, por qué son errores y cómo corregirlos.
+                    Minúsculas-Mayúsculas:
+                    Práctica de minúsculas y mayúsculas.
+                    Conexión de letras paso a paso.
+                    Entendiendo los anchos.<br>
+                    🌿Te esperamos!!!
+                </p>
+                <a href="../pages/contacto.html"> Quiero más info!</a>
+            </div>
+        </div>
+        <div class="card">
+            <figure>
+                <img src="../img/wmacetas.jpg" alt="wmacetas">
+            </figure>
+            <div class="contenido">
+                <h3>Efecto Piedra</h3>
+                <p>Dale ese lugar especial a tus plantitas🦋<br>
+                    En una tarde vamos a merendar con Patri, que nos va a tirar toda la data para reutilizar nuestros
+                    recipientes y transformarlos en una mejor versión de ellos mismos!<br>
+                    Reciclamos, charlamos, merendamos y de paso...<br>
+                    ¡Nos llevamos nuestras macetitas a casa! 🌼</p>
+                <a href="../pages/contacto.html"> Quiero más info!</a>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+    <footer>
+        <div class="ig">
+            <h3>Seguinos en Instagram!</h3>
+            <div>
+                <a href="https://www.instagram.com/cascara_taller/" target="_blank">
+                    <img class="iglogo" src="../img/iglogo.png" alt="ig-logo">
+                </a>
+            </div>
+        </div>
+        <div>
+            <a class="copy" href="https://www.linkedin.com/in/andreavnuñez/" target="_blank">
+                <b>&copy Copyright Andrea Nuñez - 2023</b>
+            </a>
+        </div>
+    </footer>
+
+</body>
 
 </html>
